feat: 회원 가입시 주소 입력, 로그인 상태 확인, 아이디 중복 검사 API 구현, etc (#30)